--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,37 +23,30 @@ jobs:
       fail-fast: false
       matrix:
         php-versions: ['7.4', '8.0', '8.1' ]
-        databases: ['sqlite'] 
         server-versions: ['stable21', 'stable22', 'stable23', 'stable24', 'stable25, 'stable26', 'stable27']
         experimental: [false]
         include:
           - php-versions: '8.1'
-            databases: sqlite
             server-versions: master
             experimental: true
         exclude:
           - php-versions: '8.1'
-            databases: sqlite
             server-versions: 'stable21'
             experimental: false
           - php-versions: '8.1'
-            databases: sqlite
             server-versions: 'stable22'
             experimental: false
           - php-versions: '8.1'
-            databases: sqlite
             server-versions: 'stable23'
             experimental: false
           - php-versions: '7.4'
-            databases: sqlite
             server-versions: 'stable26'
             experimental: false
           - php-versions: '7.4'
-            databases: sqlite
             server-versions: 'stable27'
             experimental: false
   
-    name: test-php${{ matrix.php-versions }}-${{ matrix.databases }}-${{ matrix.server-versions }}
+    name: test-php${{ matrix.php-versions }}-sqlite-${{ matrix.server-versions }}
 
     steps:
       - name: Checkout Nextcloud Server
@@ -108,7 +101,7 @@ jobs:
       - name: Set up Nextcloud
         run: |
           mkdir data
-          ./occ maintenance:install --verbose --database=${{ matrix.databases }} --database-name=nextcloud --database-user=root --database-pass=rootpassword --admin-user admin --admin-pass password 
+          ./occ maintenance:install --verbose --database=sqlite --database-name=nextcloud --database-user=root --database-pass=rootpassword --admin-user admin --admin-pass password 
           ./occ app:enable ${{ env.APP_NAME }}
 
       - name: Check Syntax
