more aggressive compatibility update

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,13 +24,22 @@ jobs:
       matrix:
         php-versions: ['8.2', '8.3' ]
         databases: ['sqlite']
-        server-versions: ['stable24', 'stable25', 'stable26', 'stable27', 'stable28', 'stable29', 'stable30']
+        server-versions: ['stable26', 'stable27', 'stable28', 'stable29', 'stable30']
         experimental: [false]
         include:
           - php-versions: '8.3'
             databases: sqlite
             server-versions: master
             experimental: true
+        exclude:
+          - php-versions: '8.2'
+            databases: sqlite
+            server-versions: 'stable26'
+            experimental: false
+          - php-versions: '8.2'
+            databases: sqlite
+            server-versions: 'stable27'
+            experimental: false
   
     name: test-php${{ matrix.php-versions }}-${{ matrix.databases }}-${{ matrix.server-versions }}
 
