--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,14 +25,7 @@ jobs:
         php-versions: ['8.2', '8.3']
         databases: ['sqlite']
         server-versions:
-          [
-            'stable26',
-            'stable27',
-            'stable28',
-            'stable29',
-            'stable30',
-            'stable31',
-          ]
+          ['stable27', 'stable28', 'stable29', 'stable30', 'stable31']
         experimental: [false]
         include:
           - php-versions: '8.3'
